--- a/about.html
+++ b/about.html
@@ -31,6 +31,15 @@ title: about
     {% include mathjax.html %}
 </head>
 <body>
+    <div class='nav'>
+        <ul class='wrap'>
+            <li><a href='index.html'>Home</a></li>
+            <li><a href='publications.html'>Publications</a></li>
+            <li><a href='about.html'>About</a></li>
+    
+            <!-- <li><a href='https://scholar.google.com/citations?hl=en&user=vwCuOPQAAAAJ' target='_blank'>Google Scholar</a></li> -->
+        </ul>
+    </div>
 	<div id='landing'>
         <h1>Junyou Simon Li</h1>
         <p>Hi! It's very nice to e-meet you. 😁</p>
