--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@ title: home
 			<li>
 				<a href='publications.html'>Publications</a>
 			</li>
+            <li>
+				<a href='notes.html'>Notes</a>
+			</li>
 			<li>
 				<a href='/blog'>Blog</a>
 			</li>
