--- a/publications.html
+++ b/publications.html
@@ -29,6 +29,9 @@
     <div class='nav'>
         <ul class='wrap'>
             <li><a href='index.html'>Home</a></li>
+            <li><a href='publications.html'>Publications</a></li>
+            <li><a href='about.html'>About</a></li>
+    
             <!-- <li><a href='https://scholar.google.com/citations?hl=en&user=vwCuOPQAAAAJ' target='_blank'>Google Scholar</a></li> -->
         </ul>
     </div>
