--- a/index.html
+++ b/index.html
@@ -50,10 +50,7 @@ title: home
 				<a href='/blog'>Blog</a>
 			</li>
 			<li>
-				<a href='https://github.com/SimonJunyouLi' target='_blank'>Code</a>
-			</li>
-            <li>
-                <a href='https://www.linkedin.com/in/junyou-li/' target='_blank'>Linkedin</a>
+                <a href="resume.pdf">Resume</a>, <a href='https://github.com/SimonJunyouLi' target='_blank'>Code</a>, <a href='https://www.linkedin.com/in/junyou-li/' target='_blank'>Linkedin</a>
             </li>
 			<li id='contact'>
 				simonjunyou[dot]li[at]gmail[dot]com
