--- a/publications.html
+++ b/publications.html
@@ -43,7 +43,7 @@
                     <strong>A Data-Driven Environmental Sound Classification System with Acoustic Triboelectric Nanogenerators</strong>
                 </p>
                 <p class='paper-authors'>
-                    Majid Haji Bagher, Junyou Li, Emma Gu, Karim Habashy, Md Masud Rana, Jack Zhang, Gaozhi Xiao, Pengcheng Xi, Dayan Ban
+                    Majid Haji Bagheri, Junyou Li, Emma Gu, Karim Habashy, Md Masud Rana, Jack Zhang, Gaozhi Xiao, Pengcheng Xi, Dayan Ban
                 </p>
                 <p class='paper-venue'>
                     <em>IEEE Canadian Conference On Electrical and Computer Engineering</em>, 2024.
@@ -67,7 +67,7 @@
             </div>        
         	
         
-        <em>* Denotes joint authorship.</em>
+        <!-- <em>* Denotes joint authorship.</em> -->
     </div>
 </body>
 </html>
