--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@ title: about
         <ul class='wrap'>
             <li><a href='index.html'>Home</a></li>
             <li><a href='publications.html'>Publications</a></li>
-            <li><a href='about.html'>About</a></li>
+            <li><a href='notes.html'>Notes</a></li>
     
             <!-- <li><a href='https://scholar.google.com/citations?hl=en&user=vwCuOPQAAAAJ' target='_blank'>Google Scholar</a></li> -->
         </ul>
