--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@ title: home
         <!-- <p>Want to learn more about me? Feel free to click <a href="about.html">here</a>!</p> -->
 		<ul id='links'>
             <li>
-				<a href='about.html'>About me</a>
+				<a href='/about'>About me</a>
 			</li>
 			<li>
-				<a href='publications.html'>Publications</a>
+				<a href='/publications'>Publications</a>
 			</li>
             <li>
-				<a href='notes.html'>Notes</a>
+				<a href='/notes'>Notes</a>
 			</li>
 			<li>
 				<a href='/blog'>Blog</a>
 			</li>
 			<li>
-                <a href="resume.pdf">Resume</a>, <a href='https://github.com/SimonJunyouLi' target='_blank'>Code</a>, <a href='https://www.linkedin.com/in/junyou-li/' target='_blank'>Linkedin</a>
+                <a href="/resume.pdf">Resume</a>, <a href='https://github.com/SimonJunyouLi' target='_blank'>Code</a>, <a href='https://www.linkedin.com/in/junyou-li/' target='_blank'>Linkedin</a>
             </li>
 			<li id='contact'>
 				simonjunyou[dot]li[at]gmail[dot]com
