--- a/publications.html
+++ b/publications.html
@@ -29,14 +29,14 @@
     <div class='nav'>
         <ul class='wrap'>
             <li><a href='index.html'>Home</a></li>
-            <li><a href='publications.html'>Publications</a></li>
             <li><a href='about.html'>About</a></li>
+            <li><a href='notes.html'>Notes</a></li>
     
             <!-- <li><a href='https://scholar.google.com/citations?hl=en&user=vwCuOPQAAAAJ' target='_blank'>Google Scholar</a></li> -->
         </ul>
     </div>
     <div id='papers'>
-        <h1>Select publications</h1>
+        <h1>Publications</h1>
         
             <div class='paper-row'>
                 <p class='paper-title'>
