--- a/notes.html
+++ b/notes.html
@@ -64,9 +64,9 @@ MathJax.Hub.Config({
 <body>
     <div class='nav'>
     <ul class='wrap'>
-        <li><a href='index.html'>Home</a></li>
-        <li><a href='publications.html'>Publications</a></li>
-        <li><a href='about.html'>About</a></li>
+        <li><a href='/index'>Home</a></li>
+        <li><a href='/publications'>Publications</a></li>
+        <li><a href='/about'>About</a></li>
 
         <!-- <li><a href='/blog'>Blog</a></li>
         <li><a href='/feed.xml'>RSS</a></li> -->
