--- a/about.html
+++ b/about.html
@@ -33,9 +33,9 @@ title: about
 <body>
     <div class='nav'>
         <ul class='wrap'>
-            <li><a href='index.html'>Home</a></li>
-            <li><a href='publications.html'>Publications</a></li>
-            <li><a href='notes.html'>Notes</a></li>
+            <li><a href='/index'>Home</a></li>
+            <li><a href='/publications'>Publications</a></li>
+            <li><a href='/notes'>Notes</a></li>
     
             <!-- <li><a href='https://scholar.google.com/citations?hl=en&user=vwCuOPQAAAAJ' target='_blank'>Google Scholar</a></li> -->
         </ul>
