--- a/publications.html
+++ b/publications.html
@@ -28,9 +28,9 @@
 <body>
     <div class='nav'>
         <ul class='wrap'>
-            <li><a href='index.html'>Home</a></li>
-            <li><a href='about.html'>About</a></li>
-            <li><a href='notes.html'>Notes</a></li>
+            <li><a href='/index'>Home</a></li>
+            <li><a href='/about'>About</a></li>
+            <li><a href='/notes'>Notes</a></li>
     
             <!-- <li><a href='https://scholar.google.com/citations?hl=en&user=vwCuOPQAAAAJ' target='_blank'>Google Scholar</a></li> -->
         </ul>
