--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 title: home
-author: Dhrumil Patel
+author: Simon Li
 ---
 
 <html>
@@ -9,7 +9,7 @@ author: Dhrumil Patel
     <meta charset='UTF-8'>
     <meta content='width=device-width, initial-scale=1' name='viewport'/>
 
-    <meta name='description' content='Dhrumil Patel is a 3rd year CS student at Waterloo.'>
+    <meta name='description' content='Simon Li is a 3rd year CS student at Waterloo.'>
     <!-- A decent browser will parse this fine:
          https://webmasters.stackexchange.com/questions/92744. -->
     <meta name='keywords' content='
@@ -35,8 +35,7 @@ author: Dhrumil Patel
 <body>
     <div id="landing">
         <h1>{{ page.author }}</h1>
-        <p>Welcome to my personal blog! I'm Dhrumil and I'm currently a CS student at the University of Waterloo.</p>
-        <p>Feel free to chat with me about my previous work at Snowflake, Roblox, The Vector Institute, A Thinking Ape, Flinks, or at the University of Waterloo! <a href="/about">more</a></p>
+        <p>Hi there! Welcome to my personal blog! I'm Simon and I'm currently a CS student at the University of Waterloo.</p>
         <ul id="links">
             <li>
                 <a href="/blog">Blog</a>
