--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 title: home
-author: Simon Li
+author: Junyou Simon Li
 ---
 
 <html>
@@ -37,6 +37,15 @@ author: Simon Li
         <h1>{{ page.author }}</h1>
         <p>Hi there! Welcome to my personal blog! I'm Simon and I'm currently a CS student at the University of Waterloo.</p>
         <ul id="links">
+            <li>
+				<a href='/about'>About me</a>
+			</li>
+			<li>
+				<a href='/publications'>Publications</a>
+			</li>
+            <li>
+				<a href='/notes'>Notes</a>
+			</li>
             <li>
                 <a href="/blog">Blog</a>
             </li>
