--- a/about.html
+++ b/about.html
@@ -4,71 +4,27 @@ title: about
 
 <html>
 <head>
-    <title>Junyou Simon Li</title>
+    <title>{{ page.author }}</title>
     <meta charset='UTF-8'>
     <meta content='width=device-width, initial-scale=1' name='viewport'/>
 
-    <meta name='description' content='Simon Li is a CS student at University of Waterloo.'>
+    <meta name='description' content='Dhrumil Patel is a 3rd year CS student at Waterloo.'>
     <!-- A decent browser will parse this fine:
          https://webmasters.stackexchange.com/questions/92744. -->
-    <meta name='keywords' content='
-        machine learning,
-        statistical machine learning,
-        bayesian inference,
-        statistics,
-        computational statistics,
-        linear algebra,
-        numerical linear algebra,
-        statistical software,
-        deep learning,
-        computer science
-    '>
-    <meta name='author' content='Simon Li'>
+    <meta name='author' content={{ page.author }}>
 
     <link rel='shortcut icon' href='/favicon.png?v=e' />
     <link href='/css/blog.css' rel='stylesheet'/>
-
-    {% include mathjax.html %}
+    <link href='/css/landing.css' rel='stylesheet'/>
 </head>
 <body>
-    <div class='nav'>
-        <ul class='wrap'>
-            <li><a href='/index'>Home</a></li>
-            <li><a href='/publications'>Publications</a></li>
-            <li><a href='/notes'>Notes</a></li>
-    
-            <!-- <li><a href='https://scholar.google.com/citations?hl=en&user=vwCuOPQAAAAJ' target='_blank'>Google Scholar</a></li> -->
-        </ul>
-    </div>
-	<div id='landing'>
+    <div id="landing">
         <h1>Junyou Simon Li</h1>
         <p>Hi! It's very nice to e-meet you. 😁</p>
         <p>I am Simon, a 3B/4A CS student at the University of Waterloo and previously an exchange student at EPFL, the Swiss Federal Institute of Technology Lausanne.</p>
         <p>Currently, I work as an machine learning research assistant at National Research Council Canada and University of Waterloo. Before this, I was an machine learning engineer at Eon Media.</p>
         <p>Some of the topics I find exciting are: Reinforcement Learning, Computer Vision, Generative AI</p>
         <p>In particular, I'm interested in: </p>
-
-        <!-- <p>Want to learn more about me? Feel free to click <a href="about.html">here</a>!</p> -->
-		<ul id='links'>
-			<li>
-				Inverse Constrained Reinforcement Learning
-			</li>
-			<li>
-				Motion Synthesis
-			</li>
-			<li>
-				Multi-Modal Generative AI System
-			</li>
-            <li>
-                Speech Enhancement
-            </li>
-		</ul>
-        <p>Feel free to chat with me about my past experiences and research endeavors!</p>
-        <ul id="links">			
-            <li id='contact'>
-				simonjunyou[dot]li[at]gmail[dot]com
-            </li>
-        </ul>
-	</div>
+    </div>
 </body>
 </html>
