--- a/about.html
+++ b/about.html
@@ -18,13 +18,20 @@ title: about
     <link href='/css/landing.css' rel='stylesheet'/>
 </head>
 <body>
+    {% include nav.html %}
     <div id="landing">
         <h1>Junyou Simon Li</h1>
         <p>Hi! It's very nice to e-meet you. 😁</p>
         <p>I am Simon, a 3B/4A CS student at the University of Waterloo and previously an exchange student at EPFL, the Swiss Federal Institute of Technology Lausanne.</p>
         <p>Currently, I work as an machine learning research assistant at National Research Council Canada and University of Waterloo. Before this, I was an machine learning engineer at Eon Media.</p>
-        <p>Some of the topics I find exciting are: Reinforcement Learning, Computer Vision, Generative AI</p>
-        <p>In particular, I'm interested in: </p>
+        <p>Some of the topics I find exciting are: Reinforcement Learning, Computer Vision, Generative AI.</p>
+        <p>In particular, I'm interested in: Inverse Constrained Reinforcement Learning, Motion Synthesis, Multi-Modal Generative AI System, and Speech Enhancement. </p>
+        <p>Feel free to chat with me about my past experiences and research endeavors!</p>
+        <ul id="links">			
+            <li id='contact'>
+				simonjunyou[dot]li[at]gmail[dot]com
+            </li>
+        </ul>
     </div>
 </body>
 </html>
