--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@ author: Junyou Simon Li
                 <a href="/blog">Blog</a>
             </li>
             <li>
+                <a href="/resume.pdf">Resume</a>, <a href='https://github.com/SimonJunyouLi' target='_blank'>Code</a>, <a href='https://www.linkedin.com/in/junyou-li/' target='_blank'>Linkedin</a>
+            </li>
+            <!-- <li>
                 <a href="http://www.github.com/dhrumilp15" target="_blank">Code</a>
             </li>
             <li>
@@ -57,9 +60,9 @@ author: Junyou Simon Li
             </li>
             <li id="contact">
                 <a href="https://www.linkedin.com/in/dhrumilp15/">Linkedin</a>
-            </li>
+            </li> -->
             <li id="contact">
-                Send me a message at dhrumilp15[at]gmail[dot]com
+                dhrumilp15[at]gmail[dot]com
             </li>
         </ul>
     </div>
