--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ author: Junyou Simon Li
     {% include mathjax.html %} 
 </head>
 <body>
+    {% include nav.html %}
     <div id="landing">
         <h1>{{ page.author }}</h1>
         <p>Hi there! Welcome to my personal blog! I'm Simon and I'm currently a CS student at the University of Waterloo.</p>
