--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@ title: about
     <meta charset='UTF-8'>
     <meta content='width=device-width, initial-scale=1' name='viewport'/>
 
-    <meta name='description' content='Dhrumil Patel is a 3rd year CS student at Waterloo.'>
+    <meta name='description' content='Simon Li is a 3rd year CS student at Waterloo.'>
     <!-- A decent browser will parse this fine:
          https://webmasters.stackexchange.com/questions/92744. -->
     <meta name='author' content={{ page.author }}>
@@ -20,6 +20,7 @@ title: about
 <body>
     {% include nav.html %}
     <div id="landing">
+        <p>**Junyou Simon Li**</p>
         <p>Hi! It's very nice to e-meet you. 😁</p>
         <p>I am Simon, a 3B/4A CS student at the University of Waterloo and previously an exchange student at EPFL, the Swiss Federal Institute of Technology Lausanne.</p>
         <p>Currently, I work as an machine learning research assistant at National Research Council Canada and University of Waterloo. Before this, I was an machine learning engineer at Eon Media.</p>
