--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@ author: Junyou Simon Li
     <!-- {% include nav.html %} -->
     <div id="landing">
         <h1>{{ page.author }}</h1>
-        <p>Hi there! Welcome to my personal blog! I'm Simon and I'm currently a CS student at the University of Waterloo.</p>
+        <p>Hi there! </p> 
+        <p>Welcome to my personal blog! I'm Simon and I'm currently a CS student at the University of Waterloo.</p>
         <ul id="links">
             <li>
 				<a href='/about'>About me</a>
@@ -45,11 +46,11 @@ author: Junyou Simon Li
 				<a href='/publications'>Publications</a>
 			</li>
             <li>
-				<a href='/notes'>Notes</a>
+				<a href='/notes'>Expository Notes</a>
 			</li>
-            <li>
+            <!-- <li>
                 <a href="/blog">Blog</a>
-            </li>
+            </li> -->
             <li>
                 <a href="/resume.pdf">Resume</a>, <a href='https://github.com/SimonJunyouLi' target='_blank'>Code</a>, <a href='https://www.linkedin.com/in/junyou-li/' target='_blank'>Linkedin</a>
             </li>
@@ -63,7 +64,7 @@ author: Junyou Simon Li
                 <a href="https://www.linkedin.com/in/dhrumilp15/">Linkedin</a>
             </li> -->
             <li id="contact">
-                dhrumilp15[at]gmail[dot]com
+				simonjunyou[dot]li[at]gmail[dot]com
             </li>
         </ul>
     </div>
