--- a/notes.html
+++ b/notes.html
@@ -96,9 +96,9 @@ autor: Junyou Simon Li
             <span class='hidden'>1</span>
             
         </div>
-        <div id='more'>
+        <!-- <div id='more'>
             <a href='/blog/tags/all'>See all posts</a>
-        </div>
+        </div> -->
         <!-- <div id='blog' class='wrap'>
 
         <div id='posts' class='section'>
