--- a/notes.html
+++ b/notes.html
@@ -34,7 +34,7 @@ autor: Junyou Simon Li
 <body>
     {% include nav.html %}
     <div id='blog' class='wrap'>
-        <h1>Expository Notes</h1>
+        <!-- <h1>Expository Notes</h1> -->
         <div>
             Recently, I have started to taking notes for some interesting papers that I am reading. Here is a selection of them.
         </div>
