--- a/publications.html
+++ b/publications.html
@@ -22,7 +22,7 @@ title: about
     <!-- <div id='blog' class='wrap'> -->
 
     <div id='blog' class='wrap'>
-        <h1>Publications</h1>
+        <!-- <h1>Publications</h1> -->
         
         <div class='posts' class='section'>
             <p class='post-title'>
