--- a/notes.html
+++ b/notes.html
@@ -35,8 +35,14 @@ autor: Junyou Simon Li
     {% include nav.html %}
     <div id='blog' class='wrap'>
         <!-- <h1>Expository Notes</h1> -->
+        <div id='intro'>
+            <div class='quote'>
+                <p>Mathematics, rightly viewed, possesses not only truth, but supreme beauty.</p>
+                <a href='https://en.wikipedia.org/wiki/Bertrand_Russell' target='_blank'>Bertrand Russell</a>
+            </div>
+        </div>
         <div>
-            Recently, I have started to taking notes for some interesting papers that I am reading. Here is a selection of them.
+            I recently have started to taking notes for some interesting papers. Here is a selection of them.
         </div>
         <!-- <div id='tags'>
             <ul id='tag-nav'>
