--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@ title: about
         <p>I am Simon, a 3B/4A CS student at the University of Waterloo and previously an exchange student at EPFL, the Swiss Federal Institute of Technology Lausanne.</p>
         <p>Currently, I work as an machine learning research assistant at National Research Council Canada and University of Waterloo. Before this, I was an machine learning engineer at Eon Media.</p>
         <p>Some of the topics I find exciting are: Reinforcement Learning, Computer Vision, Generative AI.</p>
-        <p>In particular, I'm interested in: Inverse Constrained Reinforcement Learning, Motion Synthesis, Multi-Modal Generative AI System, and Speech Enhancement. </p>
+        <p>In particular, I'm interested and researching in Inverse Constrained Reinforcement Learning, Motion Synthesis, Cross Modality Generation, and Speech Enhancement. </p>
         <p>Feel free to chat with me about my past experiences and research endeavors!</p>
         <ul id="links">			
             <li id='contact'>
