--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@ author: Junyou Simon Li
             <li>
 				<a href='/about'>About me</a>
 			</li>
+            <li>
+				<a href='/research'>Research</a>
+			</li>
 			<li>
 				<a href='/publications'>Publications</a>
 			</li>
             <li>
-				<a href='/notes'>Expository Notes</a>
+				<a href='/notes'>Expository Notes</a>, <a href="/blog">Blog</a>
 			</li>
-            <li>
-                <a href="/blog">Blog</a>
-            </li>
             <li>
                 <a href="/resume.pdf">Resume</a>, <a href='https://github.com/SimonJunyouLi' target='_blank'>Code</a>, <a href='https://www.linkedin.com/in/junyou-li/' target='_blank'>Linkedin</a>
             </li>
