--- a/research.html
+++ b/research.html
@@ -20,6 +20,12 @@ title: about
 <body>
     {% include nav.html %}
     <div id="landing">
+        <div id='intro'>
+            <div class='quote'>
+                <p>In mathematics, you don't understand things. You just get used to them.</p>
+                <a href='https://en.wikipedia.org/wiki/John_von_Neumann' target='_blank'>John von Neumann</a>
+            </div>
+        </div>
         <p>I currently work as a research assistant for the Naionatl Research Council Canada and the University of Waterloo. My publications are listed <a href='/publications'>here</a>. Some of the projects I'm involved in inclues</p>
         <ul>
             <li>Audio Classification Models</li>
