--- a/index.html
+++ b/index.html
@@ -43,10 +43,7 @@ author: Junyou Simon Li
 				<a href='/about'>About me</a>
 			</li>
             <li>
-				<a href='/research'>Research</a>
-			</li>
-			<li>
-				<a href='/publications'>Publications</a>
+				<a href='/research'>Research</a>, <a href='/publications'>Publications</a>
 			</li>
             <li>
 				<a href='/notes'>Expository Notes</a>, <a href="/blog">Blog</a>
