--- a/research.html
+++ b/research.html
@@ -19,12 +19,15 @@ title: about
 </head>
 <body>
     {% include nav.html %}
-    <div id="landing">
+    <!-- <div id='blog' class='wrap'>
         <div id='intro'>
-            <div class='quote'>
-                <p>In mathematics, you don't understand things. You just get used to them.</p>
-                <a href='https://en.wikipedia.org/wiki/John_von_Neumann' target='_blank'>John von Neumann</a>
-            </div>
+
+        </div>
+    </div> -->
+    <div id="landing">
+        <div class='quote'>
+            <p><i>In mathematics, you don't understand things. You just get used to them.</i>
+            <a href='https://en.wikipedia.org/wiki/John_von_Neumann' target='_blank'><i>John von Neumann</i></a></p>
         </div>
         <p>I currently work as a research assistant for the Naionatl Research Council Canada and the University of Waterloo. My publications are listed <a href='/publications'>here</a>. Some of the projects I'm involved in inclues</p>
         <ul>
