--- a/about.html
+++ b/about.html
@@ -24,11 +24,9 @@ title: about
         <p>Hi! It's very nice to e-meet you. 😁</p>
         <p>I am Simon, a 3B/4A CS student at the University of Waterloo. Previously, I have also studied at EPFL, the Swiss Federal Institute of Technology Lausanne, as an Erasmus student.</p>
         <p>I currently work as an machine learning research assistant for a collaboration project between National Research Council Canada and University of Waterloo. Before this, I worked at Eon Media an machine learning engineer.</p>
-        <p></p>
         <p>I really enjoy travelling, cooking, watching and playing all kinds of sports in my free time.</p>
-        <p>I'm a competitive olympic sabre fencer 🤺. I have been fencing for almost a decade now and ranked as high as 12th in Canada (my ranking dropped as I didn't compete enough recently due to the exchange term ;-;). My goal for fencing is to one day represent Canada internationally, though challenging but achievable. </p>
-        <p>If you are ever around Kitchener/Waterloo area and want to fence with me or are interested in starting fencing, feel to reach to me and I can help you out!</p>
-        <p></p>
+        <p>I'm a competitive olympic sabre fencer 🤺. I have been fencing for almost a decade now and ranked as high as 12th in Canada (my ranking dropped recently as I didn't compete enough due to the exchange term ;-;). My goal for fencing is to one day represent Canada internationally, though challenging but achievable. </p>
+        <p>If you are ever around Kitchener/Waterloo area and are interested in fencing, don't hesitate to reach to me and I'd be happy to help you out.</p>
         <p>Feel free to chat with me about anything!</p>
         <ul id="links">			
             <li id='contact'>
