--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@ title: about
         <p>I currently work as an machine learning research assistant for a collaboration project between National Research Council Canada and University of Waterloo. Before this, I worked at Eon Media an machine learning engineer.</p>
         <p>I really enjoy travelling, cooking, watching and playing all kinds of sports in my free time.</p>
         <p>I'm a competitive olympic sabre fencer 🤺. I have been fencing for almost a decade now and ranked as high as 12th in Canada (my ranking dropped recently as I didn't compete enough due to the exchange term ;-;). My goal for fencing is to one day represent Canada internationally, though challenging but achievable. </p>
-        <p>If you are ever around Kitchener/Waterloo area and are interested in fencing, don't hesitate to reach to me and I'd be happy to help you out.</p>
+        <p>If you are ever around Kitchener/Waterloo area and are interested in fencing, don't hesitate to reach out to me and I'd be happy to help you out.</p>
         <p>Feel free to chat with me about anything!</p>
         <ul id="links">			
             <li id='contact'>
