--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ author: Junyou Simon Li
 				<a href='/research'>Research</a>, <a href='/publications'>Publications</a>
 			</li>
             <li>
-				<a href='/notes'>Expository Notes</a>, <a href="/blog">Blog</a>
+				<a href='/notes'>Expository Notes</a>, <a href="/blog">Blogs</a>
 			</li>
             <li>
                 <a href="/resume.pdf">Resume</a>, <a href='https://github.com/SimonJunyouLi' target='_blank'>Code</a>, <a href='https://www.linkedin.com/in/junyou-li/' target='_blank'>Linkedin</a>
