--- a/research.html
+++ b/research.html
@@ -33,7 +33,7 @@ title: about
         <ul>
             <li>Audio Classification Models</li>
             <li>Image-to-Image Translations</li>
-            <li>Cross-Modality Learning/Generation</li>
+            <li>Cross-Modality Translations</li>
             <li>Motion Syntehsis</li>
         </ul>
         <p>Previously, I have also conducted independent research with <a href='https://www.structuralbioinformatics.com/author.shtml' target='_blank'>Forbes. J Burkowski</a> on protein folding and vaccine designs. The research extended <a href='https://www.pnas.org/doi/pdf/10.1073/pnas.77.11.6309' target='_blank'>Nussinov and Jacobson</a>'s work by proposing a novel 7-Letter Scoring Scheme for protein folding. The proposed method achieved similar effectiveness while being 29% more stable compared to Pfizer COVID-19 vaccine. The full report can be found <a href='https://github.com/SimonJunyouLi/7-letter-scoring-scheme'>here</a>.</p>
@@ -42,6 +42,7 @@ title: about
         <ul>
             <li>Reinforcement Learning</li>
             <li>Computational Game Theory</li>
+            <li>Audio-to-{Image, Text} Translations</li>
             <li>Natural Language Processing</li>
         </ul>
         <p>Recently, I have been reading articles written by <a href='https://cs.uwaterloo.ca/~ppoupart/' target='_blank'>Pascal Poupart</a> on reinforcement learning, specifically Inverse Constrained Reinforcement Learning (ICRL), and <a href='https://people.epfl.ch/boi.faltings?lang=en' target='_blank'>Boi Faltings</a>, my professor for the reinforcement learning course in EPFL, on multi-agent systems and computational game theories. The notes for the papers that I read can be found <a href='/notes'>here</a>.</p>
