--- a/research.html
+++ b/research.html
@@ -42,7 +42,7 @@ title: about
         <ul>
             <li>Reinforcement Learning</li>
             <li>Computational Game Theory</li>
-            <li>Audio-to-{Image, Text} Translations</li>
+            <!-- <li>Audio-to-{Image, Text} Translations</li> -->
             <li>Natural Language Processing</li>
         </ul>
         <p>Recently, I have been reading articles written by <a href='https://cs.uwaterloo.ca/~ppoupart/' target='_blank'>Pascal Poupart</a> on reinforcement learning, specifically Inverse Constrained Reinforcement Learning (ICRL), and <a href='https://people.epfl.ch/boi.faltings?lang=en' target='_blank'>Boi Faltings</a>, my professor for the reinforcement learning course in EPFL, on multi-agent systems and computational game theories. The notes for the papers that I read can be found <a href='/notes'>here</a>.</p>
