--- a/publications.html
+++ b/publications.html
@@ -32,15 +32,25 @@ title: about
                 Majid Haji Bagheri, Junyou Li, Emma Gu, Karim Habashy, Md Masud Rana, Jack Zhang, Gaozhi Xiao, Pengcheng Xi, Dayan Ban
             </p>
             <p class='post-subtitle'>
-                <em>IEEE Canadian Conference On Electrical and Computer Engineering</em>, 2024.
+                <em>submitted to IEEE Canadian Conference On Electrical and Computer Engineering</em>, 2024.
             </p>
                 <!-- <ul class='pub-links'> <li> <a href='https://proceedings.mlr.press/v161/gundersen21a/gundersen21a.pdf' target='_blank'>Publication</a> </li> <li> <a href='https://arxiv.org/abs/2103.14224' target='_blank'>arXiv</a> </li> <li> <a href='https://github.com/PrincetonLIPS/mf-bocd' target='_blank'>Code</a> </li> </ul> -->
         </div>
         
+        <div class='posts' class='section'>
+            <p class='post-title'>
+                <strong>Self-Powered Triboelectric Nanogenerator for Environmental Sound Monitoring</strong>
+            </p>
+            <p class='post-date'>
+                Majid Haji Bagheri, Junyou Li, Emma Gu, Karim Habashy
+            </p>
+            <p class='post-subtitle'>
+                <em>Waterloo Nanotechnology Conference</em>, 2024.
+            </p>
+        </div>
             	
         <div class='posts' class='section'>
             <p class='post-title'>
-
                 <strong>Vision Transformers for Age Prediction from Gait Energy Image Data</strong>
             </p>
             <p class='post-date'>
