--- a/notes.html
+++ b/notes.html
@@ -24,7 +24,7 @@ autor: Junyou Simon Li
         deep learning,
         computer science
     '>
-    <meta name='author' content={{ page.author }}>
+    <meta name='author' content='Junyou Simon Li'>
 
     <link rel='shortcut icon' href='/favicon.png?v=e' />
     <link href='/css/blog.css' rel='stylesheet'/>
