--- a/publications.html
+++ b/publications.html
@@ -45,7 +45,7 @@ title: about
                 Majid Haji Bagheri, Junyou Li, Emma Gu, Karim Habashy
             </p>
             <p class='post-subtitle'>
-                <em>Waterloo Nanotechnology Conference</em>, 2024.
+                <em>Waterloo Nanotechnology Conference</em>, 2024; <b>Best Poster Award</b>.
             </p>
         </div>
             	
