--- a/research.html
+++ b/research.html
@@ -24,11 +24,20 @@ title: about
 
         </div>
     </div> -->
-    <div id="landing">
-        <div class='quote'>
+
+    <!-- <div id="landing"> -->
+    <div id='blog' class='wrap'>
+            <div id='intro'>
+                <div class='quote'>
+                    <p>Mathematics, rightly viewed, possesses not only truth, but supreme beauty.</p>
+                    <a href='https://en.wikipedia.org/wiki/Bertrand_Russell' target='_blank'>Bertrand Russell</a>
+                </div>
+            </div>
+        <!-- </div> -->
+        <!-- <div class='quote'>
             <p><i>In mathematics, you don't understand things. You just get used to them.</i>
             <a href='https://en.wikipedia.org/wiki/John_von_Neumann' target='_blank'><i>John von Neumann</i></a></p>
-        </div>
+        </div> -->
         <p>I currently work as a research assistant for the National Research Council Canada and the University of Waterloo. A list of my publications are be found <a href='/publications'>here</a>. Some of the projects I'm involved in includes</p>
         <ul>
             <li>Audio Classification Models</li>
@@ -42,7 +51,6 @@ title: about
         <ul>
             <li>Reinforcement Learning</li>
             <li>Computational Game Theory</li>
-            <!-- <li>Audio-to-{Image, Text} Translations</li> -->
             <li>Natural Language Processing</li>
         </ul>
         <p>Recently, I have been reading articles written by <a href='https://cs.uwaterloo.ca/~ppoupart/' target='_blank'>Prof. Pascal Poupart</a> on Reinforcement Learning, specifically Inverse Constrained Reinforcement Learning (ICRL), and <a href='https://people.epfl.ch/boi.faltings?lang=en' target='_blank'>Prof. Boi Faltings</a>, my professor for the reinforcement learning course in EPFL, on multi-agent systems and computational game theories. The notes that I wrote for the selected papers can be found <a href='/notes'>here</a>.</p>
