--- a/publications.html
+++ b/publications.html
@@ -23,16 +23,29 @@ title: about
 
     <div id='blog' class='wrap'>
         <!-- <h1>Publications</h1> -->
+
+        <div class='posts' class='section'>
+            <p class='post-title'>
+                <strong>Triboelectric Nanogenerator Empowered Live-streaming Audio Sensing for Continuous Sound Monitoring and Captioning</strong>
+            </p>
+            <p class='post-date'>
+                Majid Haji Bagheri, Junyou Li, Emma Gu, Yanguang Zhang, Gaozhi Xiao, Pengcheng Xi, Dayan Ban
+            </p>
+            <p class='post-subtitle'>
+                <em>IEEE Sensors Letters</em>, 2024.
+            </p>
+                <!-- <ul class='pub-links'> <li> <a href='https://proceedings.mlr.press/v161/gundersen21a/gundersen21a.pdf' target='_blank'>Publication</a> </li> <li> <a href='https://arxiv.org/abs/2103.14224' target='_blank'>arXiv</a> </li> <li> <a href='https://github.com/PrincetonLIPS/mf-bocd' target='_blank'>Code</a> </li> </ul> -->
+        </div>
         
         <div class='posts' class='section'>
             <p class='post-title'>
                 <strong>A Data-Driven Environmental Sound Classification System with Acoustic Triboelectric Nanogenerators</strong>
             </p>
             <p class='post-date'>
-                Majid Haji Bagheri, Junyou Li, Emma Gu, Karim Habashy, Md Masud Rana, Jack Zhang, Gaozhi Xiao, Pengcheng Xi, Dayan Ban
+                Majid Haji Bagheri, Junyou Li, Emma Gu, Karim Habashy, Md Masud Rana, Yanguang Zhang, Gaozhi Xiao, Pengcheng Xi, Dayan Ban
             </p>
             <p class='post-subtitle'>
-                <em>submitted to IEEE Canadian Conference On Electrical and Computer Engineering</em>, 2024.
+                <em>IEEE Canadian Conference On Electrical and Computer Engineering</em>, 2024.
             </p>
                 <!-- <ul class='pub-links'> <li> <a href='https://proceedings.mlr.press/v161/gundersen21a/gundersen21a.pdf' target='_blank'>Publication</a> </li> <li> <a href='https://arxiv.org/abs/2103.14224' target='_blank'>arXiv</a> </li> <li> <a href='https://github.com/PrincetonLIPS/mf-bocd' target='_blank'>Code</a> </li> </ul> -->
         </div>
