--- a/research.html
+++ b/research.html
@@ -38,13 +38,15 @@ title: about
             <p><i>In mathematics, you don't understand things. You just get used to them.</i>
             <a href='https://en.wikipedia.org/wiki/John_von_Neumann' target='_blank'><i>John von Neumann</i></a></p>
         </div> -->
-        <p>I currently work as a research assistant for the National Research Council Canada and the University of Waterloo. A list of my publications are be found <a href='/publications'>here</a>. Some of the projects I'm involved in includes</p>
+        <p>I currently work as a machine learning research assistant for the National Research Council Canada and EPFL AI Lab. A list of my publications are be found <a href='/publications'>here</a>. Some of the projects I'm involved in includes</p>
         <ul>
             <li>Audio Classification Models</li>
             <li>Image-to-Image Translations</li>
             <li>Cross-Modal Translations</li>
             <li>Motion Syntehsis</li>
+            <li>Defeasible Reasoning</li>
         </ul>
+
         <p>Previously, I have also conducted independent research with <a href='https://www.structuralbioinformatics.com/author.shtml' target='_blank'>Prof. Forbes J. Burkowski</a> on protein folding and vaccine designs. The research extended <a href='https://www.pnas.org/doi/pdf/10.1073/pnas.77.11.6309' target='_blank'>Nussinov and Jacobson</a>'s work by proposing a novel 7-Letter Scoring Scheme for protein folding. The proposed method achieved similar effectiveness while being 29% more stable compared to Pfizer COVID-19 vaccine. The full report can be found <a href='https://github.com/SimonJunyouLi/7-letter-scoring-scheme'>here</a>.</p>
 
         <p>Beside the aforementioned topics, some of my current research interests are</p>
@@ -53,7 +55,7 @@ title: about
             <li>Computational Game Theory</li>
             <li>Natural Language Processing</li>
         </ul>
-        <p>Recently, I have been reading articles written by <a href='https://cs.uwaterloo.ca/~ppoupart/' target='_blank'>Prof. Pascal Poupart</a> on Reinforcement Learning, specifically Inverse Constrained Reinforcement Learning (ICRL), and <a href='https://people.epfl.ch/boi.faltings?lang=en' target='_blank'>Prof. Boi Faltings</a>, my professor for the reinforcement learning course in EPFL, on multi-agent systems and computational game theories. The notes that I wrote for the selected papers can be found <a href='/notes'>here</a>.</p>
+        <!-- <p>Recently, I have been reading articles written by <a href='https://cs.uwaterloo.ca/~ppoupart/' target='_blank'>Prof. Pascal Poupart</a> on Reinforcement Learning, specifically Inverse Constrained Reinforcement Learning (ICRL), and <a href='https://people.epfl.ch/boi.faltings?lang=en' target='_blank'>Prof. Boi Faltings</a>, my professor for the reinforcement learning course in EPFL, on multi-agent systems and computational game theories. The notes that I wrote for the selected papers can be found <a href='/notes'>here</a>.</p> -->
         <!-- <p>In particular, I'm interested and researching in Inverse Constrained Reinforcement Learning, Motion Synthesis, Cross Modality Generation, and Speech Enhancement. </p> -->
         <p>Feel free to chat with me about my past experiences and research endeavors!</p>
         <ul id="links">			
