Update research & cv

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ author: Junyou Simon Li
 				<a href='/notes'>Expository Notes</a>, <a href="/blog">Blogs</a>
 			</li>
             <li>
-                <a href="/resume.pdf">Resume</a>, <a href='https://github.com/SimonJunyouLi' target='_blank'>Code</a>, <a href='https://www.linkedin.com/in/junyou-li/' target='_blank'>Linkedin</a>
+                <a href="/cv.pdf">CV</a>, <a href='https://github.com/SimonJunyouLi' target='_blank'>GitHub</a>, <a href='https://www.linkedin.com/in/junyou-li/' target='_blank'>LinkedIn</a>
             </li>
             <!-- <li>
                 <a href="http://www.github.com/dhrumilp15" target="_blank">Code</a>
