--- a/research.html
+++ b/research.html
@@ -30,7 +30,7 @@ title: about
             <div id='intro'>
                 <div class='quote'>
                     <p>In mathematics, you don't understand things. You just get used to them.</p>
-                    <a href='https://en.wikipedia.org/wiki/John_von_Neumann' target='_blank'><i>John von Neumann</a>
+                    <a href='https://en.wikipedia.org/wiki/John_von_Neumann' target='_blank'><i>John von Neumann</i></a>
                 </div>
             </div>
         <!-- </div> -->
